--- a/VisualStudioProject/HolzToolsWPF/MainWindow.xaml
+++ b/VisualStudioProject/HolzToolsWPF/MainWindow.xaml
@@ -622,8 +622,8 @@
                 <!-- Log Box -->
                 <ScrollViewer Grid.ColumnSpan="20" Grid.Row="10" Visibility="Collapsed" 
                           x:Name="logBox" Height="150" VerticalAlignment="Bottom">
-                    <TextBlock x:Name="logBoxText" Background="White" Foreground="Black" 
-                       TextWrapping="Wrap" Padding="3,2,0,0"/>
+                    <TextBox x:Name="logBoxText" Background="White" Foreground="Black" 
+                             TextWrapping="Wrap" Padding="3,2,0,0" IsReadOnly="True"/>
                 </ScrollViewer>
             </Grid>
         </Border>
