--- a/VisualStudioProject/HolzToolsWPF/ModeControls/ModeLightning.xaml
+++ b/VisualStudioProject/HolzToolsWPF/ModeControls/ModeLightning.xaml
@@ -203,7 +203,7 @@
                 </Border>
                 
                 <!-- Preview -->
-                <Border BorderThickness="0" CornerRadius="4"
+                <!--<Border BorderThickness="0" CornerRadius="4"
                         Background="{DynamicResource CardBackground}"
                         Height="auto" Margin="10" Width="275">
                     <Grid>
@@ -222,19 +222,19 @@
                             <ColumnDefinition Width="10"/>
                         </Grid.ColumnDefinitions>
 
-                        <!-- Title -->
+                        --><!-- Title --><!--
                         <TextBlock Text="Preview" Foreground="{DynamicResource AccentColor}" 
                                    Grid.Column="1" Grid.Row="1" 
                                    Grid.ColumnSpan="3" FontSize="16" 
                                    FontWeight="SemiBold" Margin="0,0,0,5"/>
 
-                        <!-- Fan -->
+                        --><!-- Fan --><!--
                         <uc:LedFanControl Grid.Column="1" Grid.Row="3" 
                                           Margin="15,0,15,15"
                                           Mode="Lightning" Speed="50" 
                                           DisplayedColor="{Binding RealColor}"/>
 
-                        <!-- LED Stripes -->
+                        --><!-- LED Stripes --><!--
                         <uc:LedStripControl Grid.Column="1" Grid.Row="5" 
                                             VerticalAlignment="Center" 
                                             Panel.ZIndex="100" Width="255"
@@ -243,7 +243,7 @@
                                             Mode="Lightning" Direction="1"
                                             Brightness="255"/>
                     </Grid>
-                </Border>
+                </Border>-->
             </WrapPanel>
         </ScrollViewer>
     </Grid>
