--- a/VisualStudioProject/HolzToolsWPF/ModeControls/ModeRainbow.xaml
+++ b/VisualStudioProject/HolzToolsWPF/ModeControls/ModeRainbow.xaml
@@ -11,7 +11,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="533" d:DesignWidth="681.8"  
              d:DataContext="{d:DesignInstance local:ModeRainbow, IsDesignTimeCreatable=True}"
-             Background="#FF3C3C3C"
              TextOptions.TextFormattingMode="Display">
     <UserControl.Resources>
         <SolidColorBrush x:Key="AccentColor" Color="{Binding Path=ActiveWindow.AccentColor,
@@ -138,7 +137,7 @@
                 </Border>
 
                 <!-- Preview -->
-                <Border BorderThickness="0" CornerRadius="4"
+                <!--<Border BorderThickness="0" CornerRadius="4"
                         Background="{StaticResource CardBackground}"
                         Height="auto" Margin="10" Width="275">
                     <Grid>
@@ -157,13 +156,13 @@
                             <ColumnDefinition Width="10"/>
                         </Grid.ColumnDefinitions>
 
-                        <!-- Title -->
+                        --><!-- Title --><!--
                         <TextBlock Text="Preview" Foreground="{DynamicResource AccentColor}" 
                                    Grid.Column="1" Grid.Row="1" 
                                    Grid.ColumnSpan="3" FontSize="16" 
                                    FontWeight="SemiBold" Margin="0,0,0,5"/>
 
-                        <!-- Fan -->
+                        --><!-- Fan --><!--
                         <uc:LedFanControl Grid.Column="1" Grid.Row="3" 
                                           Margin="15,0,15,15"
                                           Mode="Rainbow" DisplayedColor="Transparent"
@@ -171,7 +170,7 @@
                                           Brightness="{Binding Brightness}"
                                           Speed="{Binding Speed}"/>
 
-                        <!-- LED Stripes -->
+                        --><!-- LED Stripes --><!--
                         <uc:LedStripControl Grid.Column="1" Grid.Row="5" 
                                             VerticalAlignment="Center" 
                                             Panel.ZIndex="100" Width="255"
@@ -179,7 +178,7 @@
                                             Mode="Rainbow" 
                                             Brightness="{Binding Brightness}"/>
                     </Grid>
-                </Border>
+                </Border>-->
             </WrapPanel>
         </ScrollViewer>
     </Grid>
