--- a/VisualStudioProject/HolzToolsWPF/ModeControls/ModeSpinner.xaml
+++ b/VisualStudioProject/HolzToolsWPF/ModeControls/ModeSpinner.xaml
@@ -270,6 +270,109 @@
                     </Grid>
                 </Border>
 
+                <!-- Spinner Color Brightness Option -->
+                <Border BorderThickness="0" CornerRadius="4"
+                        Background="{DynamicResource CardBackground}"
+                        Margin="10" VerticalAlignment="Top" Width="275">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="10"/>
+                            <ColumnDefinition Width="25"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="25"/>
+                            <ColumnDefinition Width="10"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="10"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="10"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="10"/>
+                        </Grid.RowDefinitions>
+
+                        <!-- Title -->
+                        <Grid Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" >
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="auto"/>
+                            </Grid.ColumnDefinitions>
+
+                            <TextBlock Text="Spinner Color Brightness" FontWeight="SemiBold" 
+                                       Foreground="{DynamicResource AccentColor}" 
+                                       FontSize="16" Margin="0,0,0,5"/>
+
+                            <controls:HelpToolTip Grid.Column="1">
+                                <controls:HelpToolTip.ToolTipText>
+                                    Customize the brightness of the spinning color.
+                                </controls:HelpToolTip.ToolTipText>
+                            </controls:HelpToolTip>
+                        </Grid>
+
+                        <!-- Slider -->
+                        <TextBlock Text="0" Grid.Column="1" Grid.Row="3" 
+                                   FontSize="13" Foreground="White"
+                                   TextAlignment="Center"/>
+                        <Slider Grid.Column="2" Grid.Row="3" Minimum="0" 
+                                Maximum="255" Margin="10,0,10,0" 
+                                Value="{Binding SpinnerColorBrightness, Mode=TwoWay}" />
+                        <TextBlock Text="255" Grid.Column="3" Grid.Row="3"
+                                   FontSize="13" TextAlignment="Center"
+                                   Foreground="White"/>
+                    </Grid>
+                </Border>
+
+                <!-- Background Color Brightness Option -->
+                <Border BorderThickness="0" CornerRadius="4"
+                        Background="{DynamicResource CardBackground}"
+                        Margin="10" VerticalAlignment="Top" Width="275">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="10"/>
+                            <ColumnDefinition Width="25"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="25"/>
+                            <ColumnDefinition Width="10"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="10"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="10"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="10"/>
+                        </Grid.RowDefinitions>
+
+                        <!-- Title -->
+                        <Grid Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" >
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="auto"/>
+                            </Grid.ColumnDefinitions>
+
+                            <TextBlock Text="Background Color Brightness"
+                                       FontWeight="SemiBold" 
+                                       Foreground="{DynamicResource AccentColor}" 
+                                       FontSize="16" Margin="0,0,0,5"/>
+
+                            <controls:HelpToolTip Grid.Column="1">
+                                <controls:HelpToolTip.ToolTipText>
+                                    Customize the brightness of the background color.
+                                </controls:HelpToolTip.ToolTipText>
+                            </controls:HelpToolTip>
+                        </Grid>
+
+                        <!-- Slider -->
+                        <TextBlock Text="0" Grid.Column="1" Grid.Row="3" 
+                                   FontSize="13" Foreground="White"
+                                   TextAlignment="Center"/>
+                        <Slider Grid.Column="2" Grid.Row="3" Minimum="0" 
+                                Maximum="255" Margin="10,0,10,0" 
+                                Value="{Binding BackgroundColorBrightness, Mode=TwoWay}" />
+                        <TextBlock Text="255" Grid.Column="3" Grid.Row="3"
+                                   FontSize="13" TextAlignment="Center"
+                                   Foreground="White"/>
+                    </Grid>
+                </Border>
+
                 <!-- Speed Option -->
                 <Border BorderThickness="0" CornerRadius="4"
                         Background="{DynamicResource CardBackground}"
