--- a/VisualStudioProject/HolzToolsWPF/ModeControls/ModeStatic.xaml
+++ b/VisualStudioProject/HolzToolsWPF/ModeControls/ModeStatic.xaml
@@ -105,7 +105,7 @@
                                         <Setter Property="Template">
                                             <Setter.Value>
                                                 <ControlTemplate TargetType="Button">
-                                                    <Border x:Name="rootBorder" Background="#FF232323" CornerRadius="3">
+                                                    <Border x:Name="rootBorder" Background="#FF3C3C3C" CornerRadius="3">
                                                         <Grid>
                                                             <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                                           VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
@@ -116,8 +116,8 @@
                                                             <Trigger.EnterActions>
                                                                 <BeginStoryboard>
                                                                     <Storyboard>
-                                                                        <ColorAnimation Duration="0:0:0.1" From="#FF232323"
-                                                                                        To="#FF141414" FillBehavior="Stop"
+                                                                        <ColorAnimation Duration="0:0:0.1" From="#FF3C3C3C"
+                                                                                        To="#282828" FillBehavior="Stop"
                                                                                         Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
                                                                                         Storyboard.TargetName="rootBorder"/>
                                                                     </Storyboard>
@@ -126,17 +126,17 @@
                                                             <Trigger.ExitActions>
                                                                 <BeginStoryboard>
                                                                     <Storyboard>
-                                                                        <ColorAnimation Duration="0:0:0.1" From="#FF141414"
-                                                                                        To="#FF232323" FillBehavior="Stop"
+                                                                        <ColorAnimation Duration="0:0:0.1" From="#282828"
+                                                                                        To="#FF3C3C3C" FillBehavior="Stop"
                                                                                         Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
                                                                                         Storyboard.TargetName="rootBorder"/>
                                                                     </Storyboard>
                                                                 </BeginStoryboard>
                                                             </Trigger.ExitActions>
-                                                            <Setter Property="Background" TargetName="rootBorder" Value="#FF141414"/>
+                                                            <Setter Property="Background" TargetName="rootBorder" Value="#282828"/>
                                                         </Trigger>
                                                         <Trigger Property="IsPressed" Value="True">
-                                                            <Setter Property="Background" TargetName="rootBorder" Value="#FF0F0F0F"/>
+                                                            <Setter Property="Background" TargetName="rootBorder" Value="#232323"/>
                                                         </Trigger>
                                                         <Trigger Property="Tag" Value="Selected">
                                                             <Setter Property="BorderBrush" Value="Black" TargetName="rootBorder"/>
