--- a/VisualStudioProject/HolzToolsWPF/styles/style.xaml
+++ b/VisualStudioProject/HolzToolsWPF/styles/style.xaml
@@ -819,6 +819,7 @@
         <Setter Property="BorderBrush" Value="{StaticResource OptionMark.Static.Border}"/>
         <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
         <Setter Property="BorderThickness" Value="2"/>
+        <Setter Property="FontSize" Value="14"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type CheckBox}">
