--- a/VisualStudioProject/HolzToolsWPF/NewUpdateWindow.xaml
+++ b/VisualStudioProject/HolzToolsWPF/NewUpdateWindow.xaml
@@ -1,16 +1,15 @@
-﻿<Window x:Class="HolzTools.ChangeLogWindow"
+﻿<Window x:Class="HolzTools.NewUpdateWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HolzTools"
-        xmlns:sys="clr-namespace:System;assembly=mscorlib"
-        mc:Ignorable="d"
-        Title="ChangeLogWindow" MaxHeight="500" MaxWidth="400" 
-        Width="400" ResizeMode="NoResize" 
-        WindowStyle="None" WindowStartupLocation="CenterScreen" 
-        Background="Transparent" TextOptions.TextFormattingMode="Display"
-        AllowsTransparency="True" SizeToContent="Height" Loaded="Window_Loaded">
+        mc:Ignorable="d" WindowStyle="None" ResizeMode="NoResize"
+        Title="Alert" MaxHeight="450" MaxWidth="600" 
+        AllowsTransparency="True"
+        SizeToContent="WidthAndHeight" Background="Transparent"
+        WindowStartupLocation="CenterScreen"
+        Loaded="Window_Loaded">
     <Window.Resources>
         <SolidColorBrush x:Key="AccentColor" Color="{Binding AccentColor}"/>
     </Window.Resources>
@@ -25,12 +24,11 @@
             </BeginStoryboard>
         </EventTrigger>
     </Window.Triggers>
-    <Border BorderBrush="{DynamicResource AccentColor}" BorderThickness="1" Background="#FF2D2D2D" 
-            CornerRadius="1" >
+    <Border CornerRadius="1" Background="#FF2D2D2D" BorderThickness="1"
+            BorderBrush="{DynamicResource AccentColor}" x:Name="rootBorder">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="20"/>
-                <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="20"/>
             </Grid.ColumnDefinitions>
@@ -38,22 +36,39 @@
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="20"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="20"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="30"/>
                 <RowDefinition Height="25"/>
-                <RowDefinition Height="10"/>
+                <RowDefinition Height="20"/>
             </Grid.RowDefinitions>
 
-            <!-- Header -->
-            <TextBlock Text="Changelog for Version " Grid.Column="1" Grid.Row="1"
-                       FontSize="20" Foreground="White" x:Name="versionText"/>
-            <TextBlock Text="{Binding CurrentVersion}" Grid.Column="2"
-                       Grid.Row="1" FontSize="20" 
-                       Foreground="White"/>
+            <!--Title-->
+            <Grid Grid.Column="1" Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock FontSize="20" Foreground="White">
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="Text" Value="New Application Update "/>
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding IsArduinoUpdate}" 
+                                             Value="true">
+                                    <Setter Property="Text"
+                                            Value="New Arduino Binary Update "/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+                <TextBlock Text="{Binding NewVersion}" Grid.Column="2" 
+                           FontSize="20" Foreground="White"/>
+            </Grid>
 
             <!-- Changelog -->
             <ScrollViewer Grid.Column="1" Grid.Row="3" Margin="10,0,0,0"
-                          Grid.ColumnSpan="2" VerticalScrollBarVisibility="Auto"
+                          VerticalScrollBarVisibility="Auto"
                           BorderThickness="0">
                 <StackPanel>
                     <!-- Fix Grid -->
@@ -167,10 +182,24 @@
 
             </ScrollViewer>
 
-            <!-- OK Button -->
-            <Button x:Name="okBtn" Content="Got it!" Grid.Column="1" Grid.Row="5" 
-                    Grid.ColumnSpan="2" Width="100" Click="OkBtn_Click" 
-                    Style="{StaticResource applyBtnStyle}"/>
+            <!--Accept and cancel buttons-->
+            <Grid Grid.Row="5" Grid.Column="1" x:Name="YNBtnGrid">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="30"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="0" Content="Cancel" Width="140" 
+                        Height="25" x:Name="noBtn" Foreground="White" 
+                        Style="{StaticResource cancelBtnStyle}" Click="YesNoBtn_Click"
+                        IsCancel="True"
+                        HorizontalAlignment="Right"/>
+                <Button Grid.Column="2" Content="Update" Width="140"
+                        HorizontalAlignment="Left" Height="25" 
+                        x:Name="yesBtn" Foreground="White"
+                        Style="{StaticResource applyBtnStyle}" Click="YesNoBtn_Click"
+                        IsDefault="True"/>
+            </Grid>
         </Grid>
     </Border>
 </Window>
