--- a/VisualStudioProject/HolzToolsWPF/UserControls/Settings.xaml
+++ b/VisualStudioProject/HolzToolsWPF/UserControls/Settings.xaml
@@ -3,6 +3,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HolzTools.UserControls"
+             xmlns:controls="clr-namespace:HolzTools.CustomControls"
              xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
              x:Class="HolzTools.UserControls.Settings"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
@@ -218,28 +219,58 @@
                             <RowDefinition Height="auto"/>
                             <RowDefinition Height="auto"/>
                             <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
                             <RowDefinition Height="10"/>
                         </Grid.RowDefinitions>
 
                         <TextBlock Text="Developer Settings" Foreground="{DynamicResource AccentColor}"  
-                               Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2"
+                               Grid.Column="1" Grid.Row="1"
                                FontSize="16" FontWeight="SemiBold" Margin="0,0,0,5"/>
 
                         <CheckBox Grid.Row="2" Grid.Column="1" Foreground="White"
-                              Grid.ColumnSpan="2" Content="Enable logging"
+                                  Content="Enable logging"
                               FontSize="14" Margin="5"
                               IsChecked="{Binding SelectedEnableLogBox}"/>
 
                         <CheckBox Grid.Row="3" Grid.Column="1" Foreground="White"
-                              Grid.ColumnSpan="2" Content="Block Alerts"
+                                  Content="Block Alerts"
                               FontSize="14" Margin="5"
                               IsChecked="{Binding SelectedBlockPopups}"/>
 
                         <CheckBox Grid.Row="4" Grid.Column="1" Foreground="White"
-                              Grid.ColumnSpan="2" Content="Automatically start BASS.Net"
+                                  Content="Automatically start BASS.Net"
                               FontSize="14" Margin="5"
                               IsChecked="{Binding SelectedStartBassNet}"/>
 
+                        <Grid Grid.Column="1" Grid.Row="5" Margin="5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="auto"/>
+                            </Grid.ColumnDefinitions>
+
+                            <!--BAUD-Rate Property-->
+                            <TextBlock Text="TCP-Port:" Foreground="White" 
+                                       Grid.Column="0" Grid.Row="5" FontSize="14"
+                                       VerticalAlignment="Center"/>
+
+
+                            <TextBox Grid.Column="1"
+                                 Text="{Binding SelectedTCPPort}" 
+                                 TextAlignment="Center" FontSize="14" Height="23"
+                                 VerticalAlignment="Bottom" Margin="45,0,45,0"
+                                 Background="Transparent" Foreground="White" 
+                                 BorderThickness="0,0,0,1" BorderBrush="White"
+                                 PreviewTextInput="TextBox_PreviewTextInput"/>
+
+                            <controls:HelpToolTip Grid.Column="2">
+                                <controls:HelpToolTip.ToolTipText>
+                                    Choose the default TCP-Port where the application 
+                                    will listen for commands by HolzTools Mobile.
+                                    The default port is 39769.
+                                </controls:HelpToolTip.ToolTipText>
+                            </controls:HelpToolTip>
+                        </Grid>
                     </Grid>
                 </Border>
 
