--- a/AndroidStudioProject/HolzToolsMobile/app/src/main/res/layout/activity_properties.xml
+++ b/AndroidStudioProject/HolzToolsMobile/app/src/main/res/layout/activity_properties.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PropertiesActivity"
+    tools:context=".LedPropertiesActivity"
     android:background="@color/colorPrimaryBackground"
     android:orientation="vertical">
 
