--- a/VisualStudioProject/HolzToolsWPF/UserControls/LedItemProperties.xaml
+++ b/VisualStudioProject/HolzToolsWPF/UserControls/LedItemProperties.xaml
@@ -63,11 +63,13 @@
                     <!--Name Property-->
                     <TextBlock Text="Name:" Foreground="White" Grid.Column="1" 
                                Grid.Row="2" FontSize="14" Margin="5"/>
-                    <TextBox Grid.Column="2" Grid.Row="2" Text="{Binding SelectedItemName}" 
+                    <TextBox Grid.Column="2" Grid.Row="2" 
+                             Text="{Binding SelectedItemName}" 
                              TextAlignment="Center" FontSize="14" Height="23"
                              VerticalAlignment="Bottom" Margin="20,0,35,0"
                              Background="Transparent" Foreground="White" 
-                             BorderThickness="0,0,0,1" BorderBrush="White"/>
+                             BorderThickness="0,0,0,1" BorderBrush="White"
+                             PreviewTextInput="Name_PreviewTextInput"/>
 
                     <!--Type Property-->
                     <TextBlock Text="Type:" Foreground="White" Grid.Column="1" 
