--- a/AndroidStudioProject/HolzToolsMobile/app/src/main/res/menu/menu_properties_toolbar.xml
+++ b/AndroidStudioProject/HolzToolsMobile/app/src/main/res/menu/menu_properties_toolbar.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/deleteLed"
+        android:title="Delete"
+        android:icon="@drawable/ic_delete"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/apply"
         android:title="Apply"
         android:icon="@drawable/ic_apply"
