--- a/AndroidStudioProject/HolzToolsMobile/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProject/HolzToolsMobile/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:theme="@style/AppTheme"
     android:id="@+id/mainDrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
