--- a/AndroidStudioProject/HolzToolsMobile/app/src/main/res/menu/menu_toolbar.xml
+++ b/AndroidStudioProject/HolzToolsMobile/app/src/main/res/menu/menu_toolbar.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item android:id="@+id/menuPower"
+        android:title="Power On/Off"
+        android:icon="@drawable/ic_power"
+        android:iconTint="@color/colorPrimaryText"
+        app:showAsAction="always" />
+
     <item android:id="@+id/menuLedItemProperties"
         android:title="Properties"
         android:icon="@drawable/ic_properties"
