--- a/VisualStudioProject/HolzToolsWPF/TermsAndConditionsWindow.xaml
+++ b/VisualStudioProject/HolzToolsWPF/TermsAndConditionsWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:main="clr-namespace:HolzTools"
         mc:Ignorable="d"
-        Title="ChangeLogWindow" MaxHeight="650" MaxWidth="600" 
+        Title="Legal information" MaxHeight="650" MaxWidth="600" 
         Width="500" ResizeMode="NoResize" 
         WindowStyle="None" WindowStartupLocation="CenterScreen" 
         Background="Transparent" TextOptions.TextFormattingMode="Display"
