--- a/AndroidStudioProject/HolzToolsMobile/app/src/main/res/layout/fragment_about.xml
+++ b/AndroidStudioProject/HolzToolsMobile/app/src/main/res/layout/fragment_about.xml
@@ -33,7 +33,8 @@
             android:textColor="@color/colorPrimaryText"
             android:text="HolzTools"
             android:textSize="10pt"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp"
+            android:layout_gravity="center_horizontal"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -52,6 +53,29 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/app_version"
+                android:textColor="#999"
+                android:textAppearance="?attr/textAppearanceListItemSecondary"
+                android:layout_marginTop="8dp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ipLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="IP-Address "
+                android:textColor="#999"
+                android:textAppearance="?attr/textAppearanceListItemSecondary"
+                android:layout_marginTop="8dp"/>
+
+            <TextView
+                android:id="@+id/ipAddressTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:textColor="#999"
                 android:textAppearance="?attr/textAppearanceListItemSecondary"
                 android:layout_marginTop="8dp"/>
